# django-frontend

./: .gitignore  db.sqlite3  pyproject.toml
static/css/: style.css
templates/: base.html  index.html
travel/: admin.py  models.py  urls.py  views.py
travel/migrations/: 0001_initial.py  0002_alter_location_image.py  0003_traveler.py  0004_alter_traveler_location.py  0005_traveler_image.py  0006_contact.py
travelsite/: settings.py  urls.py
